0.10.1 (unreleased)
===================

 * Highlight correct topnav tab on user profile (rmarianski, jhammel)
 * Display topnav tabs on news items (rmarianski)
 * Optimizations of mailing list recent activity feed (jhammel)
 * Optimizations of team recent activity feed (jhammel)

0.10 (2008-04-23)
=================

 * Add new index to membrane_tool "has_portrait" (rmarianski)
 * Merged whit-team-speedup branch back to trunk (rob)
 * Significant cleanup of unused and/or unnecessary convenience methods in BaseView and elsewhere (slinkp)
 * Require an implementation of IProvideSiteConfig (egj)
 * Extract opencore.tacktracker into plugin package oc-tt (egj)
 * Extract opencore.cabochon into plugin package oc-cab (egj)
 * Extract vacuum out into plugin package oc-vacuum (douglas)
 * Disable incomplete geocoding support; extract opencore.geocoding into plugin package oc-geotagging; rename to opencore.geotagging (slinkp)
 * Add support for i18n of topnav menuitems (rmarianski, cabraham, egj)
 * Use a content provider on the project summary page (rmarianski)
 * Add migrations to mark content with ICanFeed (douglas)
 * Disable safe_html transform on OpenPages (rob)
 * Add infrastructure to adapt anything to a feed, in oc-feed, which opencore now depends on (jhammel)
 * Configurable name for "projects" (slinkp, cabraham)
 * Add support for geocoding members and projects (slinkp)
 * Reverse iterator for wiki history to match old display (whit)
 * Rollbacks now record proper actor; fixed test too (whit)
 * Wiki history optimization and history migration script and migration view; moves rendering of version information to read an annotation maintained by events (whit)
 * Remove featurelets from project add view (novalis)
 * Make profile page the default view on a user folder, instead of wiki (rmarianski)
 * Override HTTP 500s with friendlier error message and form for submitting bug report feedback (egj, rmarianski)