@@ -5,6 +5,7 @@
  * Display topnav tabs on news items (rmarianski)
  * Optimizations of mailing list recent activity feed (jhammel)
  * Optimizations of team recent activity feed (jhammel)
+ * List featurelets installed in project in project info xml (ejucovy)
 
 0.10 (2008-04-23)
 =================
